fixed card spacing again

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
-    height: 100vh;
     margin: 0;
     background-color: #FDFFF7;
     font-family: Roboto, Georgia, 'Times New Roman', Times, serif;
     display: grid;
-    grid-template: 15vh auto / 18vw auto;
+    grid-template: 15vh auto / max(18vw, 150px) auto;
 }
 
 /*
@@ -20,7 +19,7 @@ dash
     color: #FDFFF7;
     font-weight: bold;
     padding-left: 1vw;
-    font-size: 1.4vw;
+    font-size: max(1.4vw, 14px);
 }
 
 .sidebar svg {
@@ -37,8 +36,8 @@ dash
 }
 
 .header .title {
-    font-size: 2vw;
-    height: 2vw;
+    font-size: max(2vw, 20px);
+    height: max(2vw, 20px);
     vertical-align: middle;
 }
 
@@ -46,7 +45,7 @@ dash
     display: flex;
     padding-bottom: .6rem;
     padding-left: .4rem;
-    gap: 16px;
+    gap: .8rem;
     line-height: 2vw;
     height: 2vw;
 }
@@ -89,17 +88,12 @@ dash
 
 .dash {
     background-color: rgb(226, 225, 225);
-    display: flex;
-    align-content: stretch;
-    padding-bottom: 12vh;
+    display: grid;
+    grid-template-columns: 70% auto;
+    padding: 2%;
+    padding-bottom: 4%;
 }
-.containerLeft {
-    flex: 2.6;
-    display: flex;
-}
-
-.containerRight {
-    flex: 1;
+.containerLeft, .containerRight {
     display: flex;
 }
 
@@ -117,7 +111,7 @@ dash
 .projectContainer {
     flex: 1;
     display: grid;
-    grid-template: repeat(3, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
+    grid-template: repeat(auto-fit, minmax(12%, 1fr)) / repeat(auto-fit, minmax(300px, 1fr));
     gap: 2vh 3vh;
     padding-right: 8px;
 }
@@ -136,15 +130,11 @@ dash
     left: 8px;
     box-shadow: 4px 4px 4px rgba(47, 79, 79, 0.2);
     display: grid;
-    grid-template: 3fr 1fr / 1fr 1fr;
+    grid-template: 1fr / 3fr 2fr;
 }
 
 .contents {
-    display: flex;
-    flex-direction: column;
-    padding: 0 2vw;
     grid-column: span 2;
-    padding-top: 3vh;
 }
 
 .cardButtons {
@@ -153,8 +143,6 @@ dash
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    padding: 0px 2vw;
-    padding-bottom: 2vh;
     max-width: 80%;
 }
 
@@ -183,7 +171,6 @@ dash
     grid-template-rows: 1fr 1fr;
     gap: 2vh;
 }
-
 .announcements, .trending {
     display: flex;
     flex-direction: column;
@@ -216,22 +203,14 @@ dash
 }
 
 .announce {
-    height: 100%;
     flex-grow: 1;
-    padding: .5em;
     display: flex;
     flex-direction: column;
-}
-.announcements .text {
-    line-height: 1rem;
-    max-height: 4rem;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 img.logo {
     border-radius: 50px;
-    width: max(4vw, 50px);
+    width: max(3vw, 40px);
 }
 
 .user {
@@ -243,4 +222,8 @@ img.logo {
 .trending .blank {
     display: flex;
     flex-direction: column;
+}
+
+.contents, .blank, .cardButtons{
+    padding: 2vh;
 }
